cmake_minimum_required (VERSION 2.6)

add_executable(test_cpp_extension test_bmi_cpp_extension.cc bmi_test_extension.h bmi_test_extension.cc)
target_link_libraries(test_cpp_extension grpc4bmi)

add_executable(test_bmi_service test_bmi_grpc_server.cc bmi_test_extension.h bmi_test_extension.cc)
target_link_libraries(test_bmi_service grpc4bmi)

include (CTest)

add_test(NAME test_cpp_extension_initialize COMMAND test_cpp_extension initialize)
add_test(NAME test_cpp_extension_component_name COMMAND test_cpp_extension component_name)
add_test(NAME test_cpp_extension_input_var_count COMMAND test_cpp_extension input_var_count)
add_test(NAME test_cpp_extension_input_vars COMMAND test_cpp_extension input_vars)
add_test(NAME test_cpp_extension_output_var_count COMMAND test_cpp_extension output_var_count)
add_test(NAME test_cpp_extension_output_vars COMMAND test_cpp_extension output_vars)
add_test(NAME test_cpp_extension_var_grid COMMAND test_cpp_extension var_grid)
add_test(NAME test_cpp_extension_var_type COMMAND test_cpp_extension var_type)
add_test(NAME test_cpp_extension_var_itemsize COMMAND test_cpp_extension var_itemsize)
add_test(NAME test_cpp_extension_var_nbytes COMMAND test_cpp_extension var_nbytes)
add_test(NAME test_cpp_extension_var_units COMMAND test_cpp_extension var_units)
add_test(NAME test_cpp_extension_start_time COMMAND test_cpp_extension start_time)
add_test(NAME test_cpp_extension_current_time COMMAND test_cpp_extension current_time)
add_test(NAME test_cpp_extension_time_step COMMAND test_cpp_extension time_step)
add_test(NAME test_cpp_extension_end_time COMMAND test_cpp_extension end_time)
add_test(NAME test_cpp_extension_time_units COMMAND test_cpp_extension time_units)
add_test(NAME test_cpp_extension_get_values COMMAND test_cpp_extension get_values)
add_test(NAME test_cpp_extension_get_values_at_indices COMMAND test_cpp_extension get_values_at_indices)
add_test(NAME test_cpp_extension_get_value_ptr COMMAND test_cpp_extension get_value_ptr)
add_test(NAME test_cpp_extension_finalize COMMAND test_cpp_extension finalize)

add_test(NAME test_service_initialize COMMAND test_bmi_service initialize)
add_test(NAME test_service_component_name COMMAND test_bmi_service component_name)
add_test(NAME test_service_input_var_count COMMAND test_bmi_service input_var_count)
add_test(NAME test_service_input_vars COMMAND test_bmi_service input_vars)
add_test(NAME test_service_output_var_count COMMAND test_bmi_service output_var_count)
add_test(NAME test_service_output_vars COMMAND test_bmi_service output_vars)
add_test(NAME test_service_var_grid COMMAND test_bmi_service var_grid)
add_test(NAME test_service_var_type COMMAND test_bmi_service var_type)
add_test(NAME test_service_var_itemsize COMMAND test_bmi_service var_itemsize)
add_test(NAME test_service_var_nbytes COMMAND test_bmi_service var_nbytes)
add_test(NAME test_service_var_units COMMAND test_bmi_service var_units)
add_test(NAME test_service_start_time COMMAND test_bmi_service start_time)
add_test(NAME test_service_current_time COMMAND test_bmi_service current_time)
add_test(NAME test_service_time_step COMMAND test_bmi_service time_step)
add_test(NAME test_service_end_time COMMAND test_bmi_service end_time)
add_test(NAME test_service_time_units COMMAND test_bmi_service time_units)
add_test(NAME test_service_get_values COMMAND test_bmi_service get_values)
add_test(NAME test_service_get_values_at_indices COMMAND test_bmi_service get_values_at_indices)
add_test(NAME test_service_get_value_ptr COMMAND test_bmi_service get_value_ptr)
add_test(NAME test_service_set_values COMMAND test_bmi_service set_values)
add_test(NAME test_service_set_values_at_indices COMMAND test_bmi_service set_values_at_indices)
add_test(NAME test_service_get_grid_rank COMMAND test_bmi_service get_grid_rank)
add_test(NAME test_service_get_grid_size COMMAND test_bmi_service get_grid_size)
add_test(NAME test_service_get_grid_shape COMMAND test_bmi_service get_grid_shape)
add_test(NAME test_service_get_grid_type COMMAND test_bmi_service get_grid_type)
add_test(NAME test_service_finalize COMMAND test_bmi_service finalize)
